--- a/styles.css
+++ b/styles.css
@@ -140,4 +140,67 @@ body {
     background-color: #f37f7f;
   }
 
+
+
+
+
+
+
+
+
+
+
+  /* СТИЛИ ДЛЯ СТРАНИЦЫ С РЕГЕСТРАЦИЕЙ */
+
+  .form__title {
+    text-align: center;
+    color: #bcec30;
+  }
+
+  /* Gоля авторизации */
+  .form__input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .input {
+    padding-left: 24px;
+    width: 500px;
+    height: 42px;
+    font-size: 16px;
+    font-family: Helvetica;
+    border-radius: 10px;
+    border: none;
+  }
+/* Все что ниже полей ввода */
+  .button {
+    margin-top: 10px;
+    font-size: 24px;
+    padding: 10px 150px;
+    background-color: #bcec30;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
+  .login__button {
+    margin-top: 10px;
+    font-size: 24px;
+    padding: 10px 230px;
+    background-color: #bcec30;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
+  .form__text {
+    color: aliceblue;
+    text-decoration: none;
+    transition: all .3s;
+  }
+  .form__text:hover {
+    transform: scale(1.1);
+    color: #bcec30;
+  }
+
   
