--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,16 @@ body {
     border-radius: 18px;
     cursor: pointer;
   }
+  .reg__button {
+
+    margin-top: 10px;
+    font-size: 18px;
+    padding: 10px 200px;
+    background-color: #e071f7d0;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
   .login__button {
     margin-top: 10px;
     font-size: 24px;
