--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .container {
-    font-family: Helvetica;
+    font-family: 'Montserrat';
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -139,18 +140,18 @@ body {
   .error {
     background-color: #f37f7f;
   }
+/* Кнопка выхода */
+.exit-button {
+  margin-top: 24px;
+  font-size: 24px;
+  padding: 10px 20px;
+  background-color: #e071f7d0;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+}
 
-
-
-
-
-
-
-
-
-
-
-  /* СТИЛИ ДЛЯ СТРАНИЦЫ С РЕГЕСТРАЦИЕЙ */
+/* СТИЛИ ДЛЯ СТРАНИЦЫ С РЕГЕСТРАЦИЕЙ */
 
   .form__title {
     text-align: center;
@@ -185,7 +186,6 @@ body {
     cursor: pointer;
   }
   .reg__button {
-
     margin-top: 10px;
     font-size: 18px;
     padding: 10px 200px;
@@ -193,7 +193,13 @@ body {
     border: none;
     border-radius: 18px;
     cursor: pointer;
+    transition: all .3s;
   }
+  .reg__button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 7px #e071f7d0;
+  }
+
   .login__button {
     margin-top: 10px;
     font-size: 24px;
@@ -202,15 +208,26 @@ body {
     border: none;
     border-radius: 18px;
     cursor: pointer;
-  }
-  .form__text {
-    color: aliceblue;
-    text-decoration: none;
     transition: all .3s;
   }
-  .form__text:hover {
+  .login__button:hover {
     transform: scale(1.1);
-    color: #bcec30;
+    box-shadow: 0 0 7px #bcec30;
+  }
+
+  .chek__button{
+    font-size: 18px;
+    margin-top: 32px;
+    width: 400px;
+    height: 64px;
+    border: 1px solid #bcec30;
+    background-color: #bcec30;
+    border-radius: 30px;
+    transition: all .3s;
+  }
+  .chek__button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 7px #bcec30;
   }
 
   
